criação enum status, refatoração